# GigaVacuumMobil

./: BUILD_SUCCESS.md  GAZEBO_GUIDE.md  GAZEBO_SETUP_COMPLETE.md  GAZEBO_SIMULATION_GUIDE.md  NAVIGATION_GUIDE.md  NEXT_STEPS.md  QUICKSTART_GAZEBO.md  SLAM_GUIDE.md  commands.sh  frames_2025-11-17_22.30.56.gv  frames_2025-11-19_20.55.58.gv  frames_2025-11-22_15.14.32.gv  gazebo_commands.sh  readme.md  setup_env.sh  test_diff_drive.sh  test_gazebo_setup.sh  test_robot_movement.sh  test_simulation.sh  testwp.yaml  waypoints.yaml  waypoints_identity.yaml
docs/: mapping_plan.md  mistakes.md
install/: local_setup.sh  setup.sh
install/GigaVacuumMobil/lib/GigaVacuumMobil/: cleaning_controller.py  cmd_vel_relay.py  coverage_planner.py  exploration_supervisor.py  mapping_health_monitor.py  odom_frame_fixer.py  odom_to_pose.py  scan_timestamp_sync.py
install/GigaVacuumMobil/share/GigaVacuumMobil/: GigaVacuumMobil.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cleaning_planner/lib/cleaning_planner/: coverage_executor_node  coverage_planner_node  waypoint_generator
log/: latest_build
src/GigaVacuumMobil/: CMakeLists.txt  GigaVacuumMobil.xml  package.xml
src/GigaVacuumMobil/arduino/: encoder_motor_driver.ino
src/GigaVacuumMobil/config/: cartographer.lua  controllers.yaml  gz_bridge.yaml  nav2_params.yaml  robot.rviz
src/GigaVacuumMobil/include/GigaVacuumMobil/: diffdrive_hardware.hpp
src/GigaVacuumMobil/launch/: full_cleaning.launch.py  gazebo.launch.py  navigation.launch.py  navigation_simple.launch.py  preflight_gazebo.launch.py  robot.launch.py  slam.launch.py
src/GigaVacuumMobil/maps/: my_map.pgm  my_map.yaml
src/GigaVacuumMobil/rviz/: navigation.rviz  slam.rviz
src/GigaVacuumMobil/scripts/: cleaning_controller.py  cmd_vel_relay.py  coverage_planner.py  exploration_supervisor.py  mapping_health_monitor.py  odom_frame_fixer.py  odom_to_pose.py  scan_timestamp_sync.py
src/GigaVacuumMobil/src/: diffdrive_hardware.cpp
src/GigaVacuumMobil/urdf/: GigaVacuumMobile.urdf.xacro
src/GigaVacuumMobil/worlds/: vacuum_world.sdf
src/cleaning_planner/: package.xml  setup.cfg  setup.py
src/cleaning_planner/cleaning_planner/: coverage_executor_node.py  coverage_planner_node.py
src/map_maintenance/: setup.cfg  setup.py
src/map_maintenance/resource/: map_maintenance
src/patterns/: setup.cfg  setup.py
(+54 files in other folders)
